tests/models/summaries/snapshots/summaries/can_find_summary_org_b@breeds.snap
---
source: tests/models/summaries/breeds.rs
assertion_line: 47
expression: result
---
Ok(
    Some(
        BreedSummaryExtract {
            total: 9,
            males: 3,
            females: 6,
            unkown_gender: 0,
            active: 6,
            transferred: 1,
            sold: 1,
            deceased: 1,
            average_age_months: Some(
                21.4444444444444444,
            ),
            average_weight_male: Some(
                102.2500000000000000,
            ),
            average_weight_female: Some(
                55.0833333333333333,
            ),
            total_purchase_value: 55800.00,
            average_birth_weight_male: Some(
                3.0833333333333333,
            ),
            average_birth_weight_female: Some(
                2.6250000000000000,
            ),
            average_purchase_price: Some(
                11160.0000000000000000,
            ),
            youngest_age_months: Some(
                16,
            ),
            oldest_age_months: Some(
                31,
            ),
        },
    ),
)
