tests/models/summaries/snapshots/summaries/can_generate_summary_org_a@species.snap
---
source: tests/models/summaries/species.rs
assertion_line: 80
expression: result
---
Ok(
    SpecieSummary {
        specie_name: "cattle",
        pid: PID,
        organisation_pid: PID,
        id: ID
        specie_id: ID
        total: 15,
        males: 3,
        females: 12,
        unknown_gender: 0,
        active: 14,
        transferred: 0,
        sold: 1,
        deceased: 0,
        average_age_months: Some(
            27.47,
        ),
        average_weight_male: Some(
            817.08,
        ),
        average_weight_female: Some(
            422.46,
        ),
        total_purchase_value: 708045.75,
        last_calculated_at: DATE,
        created_at: DATE,
        updated_at: DATE,
    },
)
