tests/models/summaries/snapshots/summaries/can_generate_summary_org_b@breeds.snap
---
source: tests/models/summaries/breeds.rs
assertion_line: 86
expression: result
---
Ok(
    BreedSummary {
        specie_name: "goats",
        breed_name: "Kalahari",
        pid: PID,
        organisation_pid: PID,
        id: ID
        specie_id: ID
        breed_id: ID
        total: 9,
        males: 3,
        females: 6,
        unknown_gender: 0,
        active: 6,
        transferred: 1,
        sold: 1,
        deceased: 1,
        average_age_months: Some(
            21.44,
        ),
        average_birth_weight_male: Some(
            3.08,
        ),
        average_birth_weight_female: Some(
            2.63,
        ),
        average_weight_male: Some(
            102.25,
        ),
        average_weight_female: Some(
            55.08,
        ),
        total_purchase_value: 55800.00,
        average_purchase_price: 11160.00,
        youngest_age_months: Some(
            16,
        ),
        oldest_age_months: Some(
            31,
        ),
        last_calculated_at: DATE,
        created_at: DATE,
        updated_at: DATE,
    },
)
