tests/models/summaries/snapshots/summaries/can_generate_summary_org_b@species.snap
---
source: tests/models/summaries/species.rs
assertion_line: 80
expression: result
---
Ok(
    SpecieSummary {
        specie_name: "goats",
        pid: PID,
        organisation_pid: PID,
        id: ID
        specie_id: ID
        total: 9,
        males: 3,
        females: 6,
        unknown_gender: 0,
        active: 6,
        transferred: 1,
        sold: 1,
        deceased: 1,
        average_age_months: Some(
            21.22,
        ),
        average_weight_male: Some(
            102.25,
        ),
        average_weight_female: Some(
            55.08,
        ),
        total_purchase_value: 55800.00,
        last_calculated_at: DATE,
        created_at: DATE,
        updated_at: DATE,
    },
)
